add api des and update schema
